syntax = "proto3";

package route;

service RouteService {
    rpc SendMessage (RouteMessage) returns (RouteResponse);
}

service ProxyService {
    rpc Record(RouteMessage) returns (RouteResponse);
    rpc Transmission(RouteMessage) returns (RouteResponse);
    rpc Playback(RouteMessage) returns (RouteResponse);
}

message RouteMessage {
    string message_id = 1;
    string method = 2;
    string target_id = 3;
    int64 app_id = 4;
    string log_id = 5;
    bool from_gateway = 6;
    bytes payload = 7;
    map<string, string> metadata = 8;
}

message RouteResponse {
    string message_id = 1;
    int32 status_code = 2;
    string status_message = 3;
    bytes payload = 4;
} 